bin_PROGRAMS = diary
diary_SOURCES =                 \
Config/ConfigLoader.h           \
Config/ConfigLoader.cpp         \
Lib/StringUtils.cpp             \
Lib/StringUtils.hpp             \
Lib/SystemUtils.cpp             \
Lib/SystemUtils.hpp             \
Shell/Shell.h                   \
Shell/Action                    \
Shell/Action/ActionControl.cpp  \
Shell/Action/ActionControl.h    \
Shell/Shell.cpp                 \
Database/WorkLogDBHelper.cpp    \
Database/WorkLogDBHelper.h      \
Database/DBFailureException.h   \
Database/DBFailureException.cpp \
Database/WorkLogData.h          \
Database/WorkLogData.cpp        \
Main.cpp
diary_CFLAGS = -lsqlite3
